syntax = "proto3";

package nfs;

option go_package = "github.com/Maruqes/512SvMan/api/proto/nfs;proto";


//define struct for NFS
message FolderMount {
  string machineName = 1; 
  string folderPath = 2; // shared folder
  string source = 3; // nfs source (ip:/path)
  string target = 4; // local mount point
  bool host_normal_mount = 5; //does it mount localhost or the ip, if false uses nfs and cache
}

// --- Wrapper for multiple FolderMount entries ---
message FolderMountList {
  repeated FolderMount mounts = 1;
}

message DownloadIsoRequest {
  FolderMount folderMount = 1;
  string isoUrl = 2;
  string isoName = 3;
}


message SharedFolderStatusResponse {
  bool working = 1;
  int64 spaceOccupiedGB = 2;
  int64 spaceFreeGB = 3;
  int64 spaceTotalGB = 4;
}


message FolderContents {
  repeated string files = 1;
  repeated string directories = 2;
}

message FolderPath{
  string path = 1;
}

//defines for slaves
service NFSService {
  rpc CreateSharedFolder(FolderMount) returns (CreateResponse);
  rpc RemoveSharedFolder(FolderMount) returns (CreateResponse);
  rpc MountFolder(FolderMount) returns (MountResponse);
  rpc UnmountFolder(FolderMount) returns (UnmountResponse);
  rpc SyncSharedFolder(FolderMountList) returns (CreateResponse);
  rpc GetSharedFolderStatus(FolderMount) returns (SharedFolderStatusResponse);
  rpc ListFolderContents(FolderPath) returns (FolderContents);
  rpc CanFindFileOrDir(FolderPath) returns (CreateResponse); //ok if found

  //nao devia estar aqui mas como download iso vai fazer download num folderMount facilita
  rpc DownloadIso(DownloadIsoRequest) returns (CreateResponse);
}	

message CreateResponse { bool ok = 1; }
message MountResponse { bool ok = 1; }
message UnmountResponse { bool ok = 1; }
